[fix] security issue

--- a/config/dev.env
+++ b/config/dev.env
@@ -4,4 +4,4 @@ CLIENT_ID=340623939223-csvc6hs4hkilldugk764813ei9mpojvk.apps.googleusercontent.c
 CLIENT_SECRET=Ex9UglfzBdbYjauhgi3itopT
 GOOGLE_CALENDAR_REDIRECT_URI=http://localhost:3000/google
 SITE_URL=http://localhost:3000/
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=/*Your Sendgrip Api*/
